-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8275029 | 17.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b03 |
The attached JavaFuzzer test crashes with SIGFPE after JDK-8252372:
To reproduce:
$ java -Xcomp -XX:CompileOnly=Test -XX:-TieredCompilation -XX:+StressGCM -XX:StressSeed=307976640 Test.java
$ java -Xcomp -XX:CompileOnly=Reduced -XX:-TieredCompilation -XX:+StressGCM -XX:StressSeed=4177789702 Reduced.java
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGFPE (0x8) at pc=0x00007fa8017d7912, pid=20735, tid=20736
#
# JRE version: Java(TM) SE Runtime Environment (17.0+35) (fastdebug build 17+35-LTS-2724)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17+35-LTS-2724, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# J 3 c2 Test.mainTest([Ljava/lang/String;)V (838 bytes) @ 0x00007fa8017d7912 [0x00007fa8017d7620+0x00000000000002f2]
.............
Command Line: -Xmx1G -Xcomp -Xbatch -XX:CompileOnly=Test -XX:CompileCommand=quiet -XX:-TieredCompilation -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:StressSeed=307976640 Test
.............
Current thread (0x00007fa80c028b10): JavaThread "main" [_thread_in_Java, id=20736, stack(0x00007fa815b1b000,0x00007fa815c1c000)]
Stack: [0x00007fa815b1b000,0x00007fa815c1c000], sp=0x00007fa815c1a8f0, free space=1022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
J 3 c2 Test.mainTest([Ljava/lang/String;)V (838 bytes) @ 0x00007fa8017d7912 [0x00007fa8017d7620+0x00000000000002f2]
J 2 c2 Test.main([Ljava/lang/String;)V (45 bytes) @ 0x00007fa8017d9598 [0x00007fa8017d93a0+0x00000000000001f8]
v ~StubRoutines::call_stub
V [libjvm.so+0xe95914] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x504
V [libjvm.so+0xfd1035] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*) [clone .constprop.1]+0x375
V [libjvm.so+0xfd4675] jni_CallStaticVoidMethod+0x1c5
C [libjli.so+0x47e7] JavaMain+0xd37
C [libjli.so+0x7d19] ThreadJavaMain+0x9
To reproduce:
$ java -Xcomp -XX:CompileOnly=Test -XX:-TieredCompilation -XX:+StressGCM -XX:StressSeed=307976640 Test.java
$ java -Xcomp -XX:CompileOnly=Reduced -XX:-TieredCompilation -XX:+StressGCM -XX:StressSeed=4177789702 Reduced.java
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGFPE (0x8) at pc=0x00007fa8017d7912, pid=20735, tid=20736
#
# JRE version: Java(TM) SE Runtime Environment (17.0+35) (fastdebug build 17+35-LTS-2724)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17+35-LTS-2724, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# J 3 c2 Test.mainTest([Ljava/lang/String;)V (838 bytes) @ 0x00007fa8017d7912 [0x00007fa8017d7620+0x00000000000002f2]
.............
Command Line: -Xmx1G -Xcomp -Xbatch -XX:CompileOnly=Test -XX:CompileCommand=quiet -XX:-TieredCompilation -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:StressSeed=307976640 Test
.............
Current thread (0x00007fa80c028b10): JavaThread "main" [_thread_in_Java, id=20736, stack(0x00007fa815b1b000,0x00007fa815c1c000)]
Stack: [0x00007fa815b1b000,0x00007fa815c1c000], sp=0x00007fa815c1a8f0, free space=1022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
J 3 c2 Test.mainTest([Ljava/lang/String;)V (838 bytes) @ 0x00007fa8017d7912 [0x00007fa8017d7620+0x00000000000002f2]
J 2 c2 Test.main([Ljava/lang/String;)V (45 bytes) @ 0x00007fa8017d9598 [0x00007fa8017d93a0+0x00000000000001f8]
v ~StubRoutines::call_stub
V [libjvm.so+0xe95914] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x504
V [libjvm.so+0xfd1035] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*) [clone .constprop.1]+0x375
V [libjvm.so+0xfd4675] jni_CallStaticVoidMethod+0x1c5
C [libjli.so+0x47e7] JavaMain+0xd37
C [libjli.so+0x7d19] ThreadJavaMain+0x9
- backported by
-
JDK-8275029 SIGFPE with C2 compiled code with -XX:+StressGCM
-
- Resolved
-
- relates to
-
JDK-8274406 RunThese30M.java failed "assert(!LCA_orig->dominates(pred_block) || early->dominates(pred_block)) failed: early is high enough"
-
- Resolved
-
-
JDK-8252372 Check if cloning is required to move loads out of loops in PhaseIdealLoop::split_if_with_blocks_post()
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u/548d4958
-
Commit
openjdk/jdk/b0983df5
-
Review
openjdk/jdk17u/98
-
Review
openjdk/jdk/5651
(2 links to)