8274074: SIGFPE with C2 compiled code with -XX:+StressGCM